# sphinx-swarm

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  clear.sh  clear_all_danger.sh  config.yml  delete_all_danger.sh  docker-compose.yml  graphmindset.yml  package-lock.json  readme.md  restart-second-brain-2.sh  restart-second-brain.sh  restart-swarm-no-ports.sh  restart-swarm-with-ports.sh  restart.sh  restarter.js  rocket.toml  second-brain-2.yml  second-brain.yml  sphinx.yml  sphinxv2.yml  stop.sh  stop_all.sh  superadmin.yml
.github/workflows/: buildAndRelease.yml  ci.yml  docker-build.yml
app/: .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json
app/public/: global.css  index.html  nodes.json
app/src/: App.svelte  Boltwall.svelte  Bot.svelte  Cmd.svelte  Dashboard.svelte  Flow.svelte  GraphMindset.svelte  HiveRelay.svelte  Jarvis.svelte  NavFiber.svelte  Neo4j.svelte  Proxy.svelte  Repo2Graph.svelte  Stakgraph.svelte  Wrap.svelte  api.ts  app.css  cmds.ts  main.ts  nodes.ts  storage.ts  store.ts
app/src/api/: btc.ts  cln.ts  cmd.ts  hsmd.ts  index.ts  lnd.ts  relay.ts  swarm.ts  tribes.ts
app/src/auth/: Login.svelte
app/src/btc/: Bitcoin.svelte
app/src/components/: DotWrap.svelte  Endpoint.svelte  EnpointPermission.svelte  NavFiberAdmin.svelte  NodeVersionupdater.svelte  ReceiveLine.svelte  modal.svelte  transaction.svelte
app/src/controls/: Controller.svelte  FirstConnect.svelte  controls.ts
app/src/helpers/: bitcoin.ts  cln.ts  env.ts  index.ts  lnd.ts  (+3 more)
doc/: Neo4jBackup.md  PortBasedSSL-AutoFilter.md
frontend/: package.json
prometheus/: prometheus.yml
scripts/: cleanup.sh  clear_sphinx.sh  delete_all_danger.sh  delete_sphinx_danger  delete_sphinx_danger.sh  deps.sh  pull.sh  pull_secondbrain.sh  pull_sphinx.sh  restart_sphinx.sh  rotate_livekit_keys.sh  treesitter_bootstrap.sh  update.sh  v2.sh
src/: PLAN.md  api.rs  app_login.rs  app_signup.rs  auth.rs  auto_restart_cron.rs  backup.rs  builder.rs  cmd.rs  config.rs  defaults.rs  dock.rs  env.rs  events.rs  fast_service_update.rs  graphmindset.rs  handler.rs  images.rs  lib.rs  logs.rs  main.rs  mount_backedup_volume.rs  perm.rs  renew_ssl_cert.rs  rocket_utils.rs  routes.rs  rsa.rs  secondbrain.rs  secrets.rs  sphinxv2.rs  super_cmd.rs  super_token_auth.rs  utils.rs
src/cmd/: demo.rs  mod.rs  test.rs
src/conn/: mod.rs
src/cron_jobs/: mod.rs  public_ip.rs
src/grpc/: lnd.rs  tonic_lnd.rs
src/images/: bifrost.rs  boltwall.rs  bot.rs  broker.rs  btc.rs  builtin.rs  cache.rs  chat.rs  chrome.rs  cln.rs  cln_vls.rs  config_server.rs  dufs.rs  egress.rs  elastic.rs  graphmindset.rs  hive_relay.rs  images.md  jamie.rs  jarvis.rs  livekit.rs  llama.rs  lnd.rs  lss.rs  meet.rs  mixer.rs  mod.rs  mongo.rs  navfiber.rs  neo4j.rs  postgres.rs  proxy.rs  quickwit.rs  redis.rs  relay.rs  repo2graph.rs  rqbit.rs  runner.rs  stakgraph.rs  tome.rs  (+5 more)
src/modes/: btc_test.rs  btc_test.yml  demo.rs  down.rs  mod.rs  test.rs
src/service/: mod.rs  public_ip.rs
src/setup/: mod.rs
test_logs/: README.md  generic.ndjson  task.md  vercel.ndjson
tests/: handler_test.rs
testscripts/: package-lock.json  package.json  test-claim.js  test-has.js  test-signup.js
testscripts/config/: config.js
(+160 files in other folders)
