[package]
name = "sphinx-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.13"
bollard-stubs = "1.42.0-rc.3"
futures-core = "0.3"
futures-util = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1"
anyhow = "1"
log = "0.4"
simple_logger = "1.16.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
thiserror = "1.0.31"
hex = "0.4.3"
base58 = "0.2.0"
once_cell = "1.15.0"
tonic = "0.8.2"
prost = "0.11"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
base64 = "0.13"
bip39 = "1.0.1"
rand = "0.8"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"

[build-dependencies]
tonic-build = "0.8.2"
