[package]
name = "sphinx-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.13"
bollard-stubs = "1.42.0-rc.3"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1"
anyhow = "1"
log = "0.4"
simple_logger = "1.16.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
thiserror = "1.0.31"
hex = "0.4.3"
base58 = "0.2.0"
once_cell = "1.15.0"
# tonic_lnd = "0.5.0"
tonic_lnd = { git = "https://github.com/Evanfeenstra/tonic_lnd", branch = "add-serde" }
prost = "0.11"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
base64 = "0.13"
bip39 = "1.0.1"
rand = "0.8"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
dotenv = "0.15.0"
url = "2.2.2"
rsa = "0.7.2"
