[package]
name = "sphinx_swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.13"
bollard-stubs = "1.42.0-rc.3"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1"
anyhow = "1"
log = "0.4"
simple_logger = "1.16.0"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
thiserror = "1.0.31"
hex = "0.4.3"
base58 = "0.2.0"
once_cell = "1.15.0"
# tonic_lnd = "0.5.0"
tonic_lnd = { git = "https://github.com/Evanfeenstra/tonic_lnd", branch = "add-serde" }
prost = "0.11"
reqwest = { version = "0.11", features = ["json", "default-tls"] }
base64 = "0.13"
bip39 = "1.0.1"
rand = "0.8"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
dotenv = "0.15.0"
url = "2.2.2"
rsa = "0.7.2"
walkdir = "2"
tar = "0.4"
jwt = "0.16.0"
bcrypt = "0.13"
sha2 = "0.10"
hmac = "0.12"
async-trait = "0.1.64"
tonic = { version = "0.8", features = ["tls", "transport"] }
cln-grpc = { git = "https://github.com/tobi-bams/lightning", branch = "update/send-pay" }
serde_yaml = "0.9"

[lib]
name = "sphinx_swarm"
path = "src/lib.rs"

[[bin]]
name = "perm"
path = "src/perm.rs"

[[bin]]
name = "stack"
path = "src/bin/stack/mod.rs"

[[bin]]
name = "cln"
path = "src/bin/cln/mod.rs"

[[bin]]
name = "down"
path = "src/bin/down.rs"

[[bin]]
name = "btc"
path = "src/bin/btc_test.rs"

[[bin]]
name = "btc_prod"
path = "src/bin/btc_prod.rs"

# [[bin]]
# name = "demo"
# path = "src/bin/demo/mod.rs"

# [[bin]]
# name = "test"
# path = "src/bin/test.rs"

[[bin]]
name = "cln_mainnet_test"
path = "src/bin/cln_mainnet_test.rs"

[[bin]]
name = "super"
path = "src/bin/super/mod.rs"